Fixed env files and start scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Axel Niklasson <hello@axelniklasson.se>",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=PROD node app/server.js",
+    "start": "node app/server.js",
     "dev": "NODE_ENV=DEV nodemon app/server.js"
+    "prod": "NODE_ENV=PROD node app/server.js",
   },
   "dependencies": {
     "body-parser": "1.17.2",
