Fixed package.json error

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node app/server.js",
-    "dev": "NODE_ENV=DEV nodemon app/server.js"
-    "prod": "NODE_ENV=PROD node app/server.js",
+    "dev": "NODE_ENV=DEV nodemon app/server.js",
+    "prod": "NODE_ENV=PROD node app/server.js"
   },
   "dependencies": {
     "body-parser": "1.17.2",
